--- a/ModernDataServices/ModernDataServices.Service.Host/App.config
+++ b/ModernDataServices/ModernDataServices.Service.Host/App.config
@@ -7,10 +7,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
   <connectionStrings>
-
-    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=MyData;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
-    <add name="logger_db" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-ModernDataServices.MVC.Host-20160909084557.mdf;Initial Catalog=aspnet-ModernDataServices.MVC.Host-20160909084557;Integrated Security=True" />
-
+    <add name="DefaultConnection" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="logger_db" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!-- Service Information -->
