--- a/ModernDataServices/ModernDataServices.App/App.config
+++ b/ModernDataServices/ModernDataServices.App/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
-    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
     <add name="logger_db" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
