--- a/ModernDataServices/ModernDataServices.MVC.Host/Web.config
+++ b/ModernDataServices/ModernDataServices.MVC.Host/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301879
@@ -8,9 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
- <connectionStrings>
+  <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
-    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
     <add name="logger_db" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
