--- a/ModernDataServices/ModernDataServices.Service.Host/App.config
+++ b/ModernDataServices/ModernDataServices.Service.Host/App.config
@@ -1,14 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
   </configSections>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
-    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+    <add name="HangfireDatabase" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
     <add name="logger_db" connectionString="Data Source=(localdb)\ProjectsV12;Initial Catalog=ModernDataServices;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
