--- a/ModernDataServices/ModernDataServices.Service.Host/packages.config
+++ b/ModernDataServices/ModernDataServices.Service.Host/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Metrics.NET" version="0.3.7" targetFramework="net452" />
   <package id="Metrics.NET-net40" version="0.2.15" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net45" />
@@ -9,6 +10,7 @@
   <package id="NLog" version="4.4.0-betaV15" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="StructureMap" version="4.4.1" targetFramework="net45" />
-  <package id="Topshelf" version="3.3.1" targetFramework="net45" />
+  <package id="Topshelf" version="4.0.2" targetFramework="net452" />
+  <package id="Topshelf.NLog" version="4.0.2" targetFramework="net452" />
   <package id="Topshelf.StructureMap" version="0.4.0.0" targetFramework="net45" />
 </packages>
