--- a/ModernDataServices/ModernDataServices.Service.Host/ModernDataServices.Service.Host.csproj
+++ b/ModernDataServices/ModernDataServices.Service.Host/ModernDataServices.Service.Host.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ModernDataServices.Service.Host</RootNamespace>
     <AssemblyName>ModernDataServices.Service.Host</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -32,8 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Metrics, Version=0.2.15.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Metrics.NET-net40.0.2.15\lib\net40\Metrics.dll</HintPath>
+    <Reference Include="Metrics, Version=0.3.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Metrics.NET.0.3.7\lib\net45\Metrics.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Owin, Version=3.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -81,8 +82,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Topshelf, Version=3.3.154.0, Culture=neutral, PublicKeyToken=b800c4cfcdeea87b, processorArchitecture=MSIL">
-      <HintPath>..\packages\Topshelf.3.3.1\lib\net40-full\Topshelf.dll</HintPath>
+    <Reference Include="Topshelf, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b800c4cfcdeea87b, processorArchitecture=MSIL">
+      <HintPath>..\packages\Topshelf.4.0.2\lib\net452\Topshelf.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Topshelf.NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b800c4cfcdeea87b, processorArchitecture=MSIL">
+      <HintPath>..\packages\Topshelf.NLog.4.0.2\lib\net452\Topshelf.NLog.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Topshelf.StructureMap, Version=0.4.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -98,9 +103,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Content\fonts\SocialMedia.eot" />
-    <None Include="Content\fonts\SocialMedia.ttf" />
-    <None Include="Content\fonts\SocialMedia.woff" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -114,25 +116,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap.min.css" />
-    <Content Include="Content\css\demo.css" />
-    <Content Include="Content\css\shader.css" />
-    <Content Include="Content\css\social-font.css" />
-    <Content Include="Content\fonts\SocialMedia.svg" />
+    <Content Include="Content\css\font-awesome.min.css" />
+    <Content Include="Content\css\site.css" />
     <Content Include="Content\help\index.html" />
-    <Content Include="Content\img\candy.shader-bg.jpg" />
-    <Content Include="Content\img\fire.shader-bg.jpg" />
-    <Content Include="Content\img\ice.shader-bg.jpg" />
-    <Content Include="Content\img\light.png" />
-    <Content Include="Content\img\nature.shader-bg.jpg" />
-    <Content Include="Content\img\peach.shader-bg.jpg" />
-    <Content Include="Content\img\sea.shader-bg.jpg" />
-    <Content Include="Content\js\demo.js" />
-    <Content Include="Content\js\flat-surface-shader.js" />
+    <Content Include="Content\img\banner.png" />
+    <Content Include="Content\index.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Content\js\jquery-1.11.1.min.js" />
     <Content Include="Content\js\jquery.countdown.js" />
-    <Content Include="Content\js\main.config.js" />
-    <Content Include="Content\js\placeholders.min.js" />
-    <Content Include="Content\js\shader.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
